base: Make -debian10 images default to nonroot user
Running as a non-root user inside a container provides some additional
security. For example, the runc container escape would not work for
non-root users:

https://aws.amazon.com/blogs/compute/anatomy-of-cve-2019-5736-a-runc-container-escape/

The existing Distroless images need to default to a root user for
compatibility. However, the introduction of -debian10 images gives us
an opportunity to break backwards compatibility, since users will need
to opt-in to the update anyway.

--- a/base/BUILD
+++ b/base/BUILD
@@ -9,7 +9,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary")
 
 NOBODY = 65534
 
-# Create /etc/passwd with the root user
+# Create /etc/passwd with root, nobody, and nonroot users
 passwd_entry(
     name = "root_user",
     gid = 0,
